# universe

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
assets/: README.md
data/: presets.yaml
scripts/: check_assets.sh  check_earth_moon_distance.py  fetch_hdr.sh  horizons_vectors_to_yaml.py
src/: camera.c  camera.h  dump_yaml.c  dump_yaml.h  glutil.c  glutil.h  input_mouse.c  input_mouse.h  main.c  mat4.c  mat4.h  metal_accel.h  metal_accel.m  presets.c  presets.h  render_bg.c  render_bg.h  render_lines.c  render_lines.h  render_particles.c  render_particles.h  render_rings.c  render_rings.h  scene_fbo.c  scene_fbo.h  shaders.h  sim.c  sim.h  textures.c  textures.h  ui_labels.c  ui_labels.h  ui_overlay.c  ui_overlay.h  ui_text.c  ui_text.h  util.c  util.h
